--- a/MyDDD/Src/MyDDD.Domain/MyDDD.Domain.csproj
+++ b/MyDDD/Src/MyDDD.Domain/MyDDD.Domain.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="8.5.0-preview4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MyDDD.Domain.Core\MyDDD.Domain.Core.csproj" />
+  </ItemGroup>
+
 </Project>
