--- a/MyDDD/Src/MyDDD.WebApi/MyDDD.WebApi.csproj
+++ b/MyDDD/Src/MyDDD.WebApi/MyDDD.WebApi.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MyDDD.Application\MyDDD.Application.csproj" />
+    <ProjectReference Include="..\MyDDD.Infrastructure\MyDDD.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
