添加领域时间

--- a/MyDDD/Src/MyDDD.Domain.Core/MyDDD.Domain.Core.csproj
+++ b/MyDDD/Src/MyDDD.Domain.Core/MyDDD.Domain.Core.csproj
@@ -5,11 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Events\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="FluentValidation" Version="8.5.0-preview4" />
+    <PackageReference Include="MediatR" Version="7.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
