--- a/MyDDD/Src/MyDDD.Domain/MyDDD.Domain.csproj
+++ b/MyDDD/Src/MyDDD.Domain/MyDDD.Domain.csproj
@@ -12,4 +12,10 @@
     <ProjectReference Include="..\MyDDD.Domain.Core\MyDDD.Domain.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.Extensions.Caching.Abstractions">
+      <HintPath>C:\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.extensions.caching.abstractions\2.2.0\lib\netstandard2.0\Microsoft.Extensions.Caching.Abstractions.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
